# velox

./: CMakeLists.txt  Makefile
scripts/: setup-arch.sh  setup-helper-functions.sh  setup-ubuntu.sh
velox/connectors/: Connector.cpp  Connector.h
velox/connectors/tidb/: CMakeLists.txt  TiDBConnector.cpp  TiDBConnector.h  tidb_velox_wrapper.cpp  tidb_velox_wrapper.go  tidb_velox_wrapper.h
velox/core/: QueryCtx.h
velox/dwio/common/encryption/: Encryption.h
velox/exec/: TableScan.cpp  Task.cpp
velox/exec/tests/utils/: Cursor.cpp  Cursor.h
velox/experimental/codegen/compiler_utils/: CompilerOptions.h
velox/experimental/codegen/compiler_utils/tests/: CMakeLists.txt  circleCIDefinitions.cpp
velox/experimental/codegen/vector_function/tests/: CodegenVectorFunctionTest.cpp
velox/expression/: FieldReference.cpp  FieldReference.h
velox/substrait/: CMakeLists.txt  SubstraitToVeloxExpr.cpp  SubstraitToVeloxPlan.cpp  SubstraitToVeloxPlan.h  TiDBChunkDecoder.cpp  TiDBChunkDecoder.h  TiDBQueryAdapter.cpp  TiDBQueryAdapter.h  tidb_query_adapter_wrapper.h  tidb_velox_chunk_wrapper.cpp  tidb_velox_chunk_wrapper.h
velox/substrait/tests/: Substrait2VeloxPlanConversionTest.cpp
velox/type/: Type.cpp
velox/vector/: BaseVector.h
